--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "q": "^1.5.1",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sentiment": "^4.1.0"
   }
 }
