--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "url": "https://github.com/huynhjjk/ventrove/issues"
   },
   "homepage": "https://github.com/huynhjjk/ventrove#readme",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "async": "^2.6.1",
     "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
+    "commander": "^2.18.0",
     "express": "^4.16.3",
     "google-finance": "^0.1.12",
     "google-trends-api": "^4.7.0",
     "q": "^1.5.1",
     "request": "^2.88.0",
     "sentiment": "^4.2.0"
-  },
-  "dependencies": {}
+  }
 }
