--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "async": "^2.6.1",
     "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.3.2",
     "commander": "^2.18.0",
     "express": "^4.16.3",
     "google-finance": "^0.1.12",
