--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "google-finance": "^0.1.12",
     "google-trends-api": "^4.7.0",
+    "lodash": "^4.17.11",
     "q": "^1.5.1",
     "request": "^2.88.0",
     "sentiment": "^4.2.0"
